require Drive scopes